Fixing layout issues

--- a/public/transactionStyle.css
+++ b/public/transactionStyle.css
@@ -31,7 +31,7 @@
   }
   .transac-date{
     margin-top: 20px;
-    margin-left: 500px;
+    margin-left: 0px;
     font-weight: bold;
     font-size: 15px;
   }
